rename routes in auth
